Add User entity
