# apps/api/src/app/DTO/ErrorMessageDTO.ts
@@ -1,8 +1,0 @@
-import { FieldErrors } from 'tsoa';
-
-export type ErrorMessageDTO = {
-  status: number;
-  message: string;
-  description: string;
-  fields?: FieldErrors;
-};
