# apps/api/src/app/mongodb/strippers/user/userStripper.ts
@@ -1,0 +1,6 @@
+import { StrippedUserDTO } from 'src/app/DTO/UserDTO';
+import { User } from 'src/app/mongodb/models/User';
+
+export const stripUser = ({ email }: User): StrippedUserDTO => ({
+  email,
+});
